WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26095
Crash with 3d transform on generated content div (with ACCELERATED_COMPOSITING)
https://bugs.webkit.org/show_bug.cgi?id=26095
Summary
Crash with 3d transform on generated content div (with ACCELERATED_COMPOSITING)
Simon Fraser (smfr)
Reported
2009-05-29 20:15:03 PDT
When ACCELERATED_COMPOSITING is on, putting a 3d transform on a generated content div crashes in a debug build.
Attachments
Patch, testcase, changelog
(6.86 KB, patch)
2009-06-12 17:07 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-06-12 17:07:41 PDT
Created
attachment 31222
[details]
Patch, testcase, changelog No pixel results for the test because DRT is broken with compositing currently.
mitz
Comment 2
2009-06-12 17:09:48 PDT
Comment on
attachment 31222
[details]
Patch, testcase, changelog
> + } else { > + m_graphicsLayer->setName("Anonymous Node"); > }
Please remove the braces around this 1-line block. r=me
Simon Fraser (smfr)
Comment 3
2009-06-12 17:11:49 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/ChangeLog A LayoutTests/compositing/generated-content.html A LayoutTests/platform/mac/compositing/generated-content-expected.txt M WebCore/ChangeLog M WebCore/rendering/RenderLayerBacking.cpp Committed
r44640
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug