2009-06-12  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=26095

        Fix crash when a renderer for an anonymous node is composited
        by null-checking renderer()->node().

        Test: compositing/generated-content.html

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::createGraphicsLayer):
        (WebCore::RenderLayerBacking::rendererHasBackground):
        (WebCore::RenderLayerBacking::rendererBackgroundColor):
        (WebCore::RenderLayerBacking::isSimpleContainerCompositingLayer):
        (WebCore::RenderLayerBacking::paintIntoLayer):

Canonical link: https://commits.webkit.org/36458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44640 268f45cc-cd09-0410-ab3c-d52691b4dbfc